@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2005, 2025 Wolfgang Schramm and Contributors
+ * Copyright (C) 2005, 2026 Wolfgang Schramm and Contributors
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -22,6 +22,7 @@ import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.util.ArrayList;
@@ -506,7 +507,7 @@ public class WEB {
       } else if (href.startsWith("http") == false) { //$NON-NLS-1$
 
          // Ensure that a protocol is set otherwise a MalformedURLException exception occurs
-         href = "http://" + href; //$NON-NLS-1$
+         href = "https://" + href; //$NON-NLS-1$
       }
 
       final boolean useExternalWebBrowser = _state_WEB.getBoolean(STATE_USE_EXTERNAL_WEB_BROWSER);
@@ -533,9 +534,9 @@ public class WEB {
       try {
 
          final IWebBrowser browser = support.getExternalBrowser();
-         browser.openURL(new URL(encodeSpace(href)));
+         browser.openURL(new URI(encodeSpace(href)).toURL());
 
-      } catch (final MalformedURLException | PartInitException e) {
+      } catch (final MalformedURLException | PartInitException | URISyntaxException e) {
          StatusUtil.showStatus(e);
       }
    }
